docs: added more information for finetuning

--- a/model/finetuning-clip.ipynb
+++ b/model/finetuning-clip.ipynb
@@ -375,7 +375,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def validate(model, loss_fn, dataloader):\n",
+    "def validate(model, loss_fn__img, loss_fn__txt, dataloader):\n",
     "    print(\"Validation\")\n",
     "\n",
     "    running_loss, running_correct = 0.0, 0\n",
@@ -390,7 +390,7 @@
     "            image, target = data\n",
     "            image, target = image.to(device), target.to(device)\n",
     "            preds = model(image)\n",
-    "            loss = loss_fn(preds, target)\n",
+    "            loss = loss_fn__img(preds, target)\n",
     "\n",
     "            # Record the loss information\n",
     "            running_loss += loss.item()\n",
