--- a/model/finetuning-clip.ipynb
+++ b/model/finetuning-clip.ipynb
@@ -520,7 +520,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "movieclip-tB87Ln_K-py3.11",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
